[package]
name = "LynxVk"
version = "0.1.0"
edition = "2024"

# [workspace]
# members = ["src/teapot", "src/vulkan_base"]

[dependencies]
log = "0.4.27"
simplelog = "0.12.2"
mess = { path = "src/mess" }
teapot_lean = { path = "src/teapot_lean" }
teapot = { path = "src/teapot" }
vulkan_base = { path = "src/vulkan_base" }

[profile.release-with-debug]
inherits = "release"
debug = true

# [profile.dev.build-override]
# debug = true

# [profile.release.build-override]
# debug = true
